--- a/alko.html
+++ b/alko.html
@@ -22,35 +22,31 @@
                         <div class="intro-wrapper--three">
                             <div class="intro-bar">
                                 <div class="intro__wrap">
-                                    <h1 class="intro-title">Коктейли со льдом
+                                    <h1 class="intro-title">Bubble напитки <span class="intro-titleSubtext">Новинка</span>
                                     </h1>
                                     <div class="intro__wrapper">
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Лонг - Айленд </div>
+                                                        <div class="intro__title">Bubble Латте соленая карамель</div>
                                                     </div>
-                                                    <span class="intro__text">Текила, Ром, Джин, Трипл-сек,
-                                                        Водка, лимонный фреш, Пепси
+                                                    <span class="intro__text">Эспрессо, соленая карамель, молоко, сливки, тапиока
                                                     </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>375 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Aperol Spritz</div>
+                                                        <div class="intro__title">Баббл - Баббл</div>
                                                     </div>
-                                                    <div class="intro__table-row">
-                                                        <span class="intro__text">Апероль, Сухое шампанское,
-                                                            Содовая, Апельсин
-                                                        </span>
-                                                    </div>
+                                                    <span class="intro__text">Эспрессо, апельсиновый сок, карамель, тапиока
+                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
@@ -62,72 +58,73 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Лавандовый Джин-Тоник</div>
+                                                        <div class="intro__title">Bubble "Клубника"</div>
                                                     </div>
-                                                    <div class="intro__table-row">
-                                                        <span class="intro__text">Джин, Тоник,
-                                                            Лимон, Лавандовый сироп
-                                                        </span>
-                                                    </div>
+                                                    <span class="intro__text">Клубника, молоко, мороженое, тапиока
+                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>250 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Виски - Сауэр(карамельный)
-                                                        </div>
-                                                        <div class="intro__table-row">
-                                                            <span class="intro__text">Виски, Белок,
-                                                                Лимонный фреш, Сироп карамель
-                                                            </span>
-                                                        </div>
+                                                        <div class="intro__title">Bubble "Сникерс"</div>
                                                     </div>
+                                                    <span class="intro__text">Топинг шоколад, арахис, молоко, мороженое, тапиока
+                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>260 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title"> Кровавый виски </div>
+                                                        <div class="intro__title">Bubble "Жасмин маракуйя"</div>
                                                     </div>
-                                                    <div class="intro__table-row">
-                                                        <span class="intro__text">Виски, Трипл - сек, Лимон
-                                                            фреш, Сироп вишня, Кола
-                                                        </span>
-                                                    </div>
+                                                    <span class="intro__text">Маракуйя, чай жасмин, джус боллы
+                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>270 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Голубые гавайи</div>
+                                                        <div class="intro__title">Bubble Лимонад "Клубника" </div>
                                                     </div>
-                                                    <div class="intro__table-row">
-                                                        <span class="intro__text">Ром, Блю - кюрасао, Лимон
-                                                            фреш, Спрайт
-                                                        </span>
-                                                    </div>
+                                                    <span class="intro__text">Клубника, газировка, джус боллы
+                                                    </span>
                                                 </div>
                                             </div>
                                             <div class="intro__price">
-                                                <span>250 руб.</span>
+                                                <span>350 руб.</span>
                                             </div>
                                         </div>
                                         <div class="intro__row">
+                                            <div class="intro__col">
+                                                <div class="intro__table">
+                                                    <div class="intro__table-row">
+                                                        <div class="intro__title">Bubble Лимонад "Вишня Ананас" </div>
+                                                    </div>
+                                                    <span class="intro__text">Вишня, ананас, лимон, джус боллы
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <div class="intro__price">
+                                                <span>350 руб.</span>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
@@ -142,7 +139,7 @@
                                             <div class="intro__price">
                                                 <span>250 руб.</span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
@@ -166,7 +163,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="intro-bar">
+                            <!-- <div class="intro-bar">
                                 <div class="intro__wrap">
                                     <div class="intro__decor">
                                         NEW
@@ -206,7 +203,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div class="intro-alko">
                                 <h1 class="intro-title">Алкогольные шоты</h1>
                                 <div class="intro-footer__wrap">
@@ -339,7 +336,7 @@
                                 </div>
 
                             </div>
-                            <div class="intro-footer intro-footer--beer">
+                            <!-- <div class="intro-footer intro-footer--beer">
                                 <h1 class="intro-title">Пиво
                                 </h1>
                                 <div class="intro-footer__wrap">
@@ -365,15 +362,13 @@
                                     </div>
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Балтика 0 пшеничное
-                                            <!-- <span class="intro-footer__subtext">Грейпфрут / Малина
-                                            </span> -->
                                         </div>
                                         <span class="intro-footer__subtext">0,45мл</span>
                                         <div class="intro-footer__price"><span>95 руб.</span></div>
                                     </div>
                                 </div>
 
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
