--- a/alko.html
+++ b/alko.html
@@ -60,7 +60,7 @@
                                                     <div class="intro__table-row">
                                                         <div class="intro__title">Bubble "Клубника"</div>
                                                     </div>
-                                                    <span class="intro__text">Клубника, молоко, мороженое, тапиока
+                                                    <span class="intro__text">Клубника, молоко, тапиока
                                                     </span>
                                                 </div>
                                             </div>
@@ -74,7 +74,7 @@
                                                     <div class="intro__table-row">
                                                         <div class="intro__title">Bubble "Сникерс"</div>
                                                     </div>
-                                                    <span class="intro__text">Топинг шоколад, арахис, молоко, мороженое, тапиока
+                                                    <span class="intro__text">Топинг шоколад, арахис, молоко, тапиока
                                                     </span>
                                                 </div>
                                             </div>
