--- a/alko.html
+++ b/alko.html
@@ -29,9 +29,9 @@
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Bubble Латте соленая карамель</div>
+                                                        <div class="intro__title">Bubble Латте лаванда</div>
                                                     </div>
-                                                    <span class="intro__text">Эспрессо, соленая карамель, молоко, сливки, тапиока
+                                                    <span class="intro__text">Эспрессо, лаванда, молоко, сливки, джус боллы
                                                     </span>
                                                 </div>
                                             </div>
@@ -54,7 +54,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="intro__row">
+                                        <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
@@ -67,14 +67,14 @@
                                             <div class="intro__price">
                                                 <span>350 руб.</span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
-                                                        <div class="intro__title">Bubble "Сникерс"</div>
+                                                        <div class="intro__title">Bubble "Цитрус - тоник"</div>
                                                     </div>
-                                                    <span class="intro__text">Топинг шоколад, арахис, молоко, тапиока
+                                                    <span class="intro__text">Лимон, апельсин, джус боллы, сок, тоник
                                                     </span>
                                                 </div>
                                             </div>
@@ -313,13 +313,13 @@
                                                     персик"
                                                 </div>
 
-                                                <div class="intro-footer__price"><span>150 руб.</span></div>
+                                                <div class="intro-footer__price"><span>200 руб.</span></div>
                                             </div>
                                             <span class="intro-footer__subtext">Апельсин, Лимон, Мята, Сироп</span>
                                         </div>
                                         <div class="intro-footer__cols">
                                             <div class="intro-footer__text">Классический лимонад</div>
-                                            <div class="intro-footer__price"><span>165 руб.</span></div>
+                                            <div class="intro-footer__price"><span>200 руб.</span></div>
                                         </div>
                                         <span class="intro-footer__subtext">Апельсин, Лимон, Сахарный сироп,
                                             Мята, Содовая</span>
@@ -329,7 +329,7 @@
                                         <div class="intro-footer__cols">
                                             <div class="intro-footer__text">Молочный коктейль</div>
 
-                                            <div class="intro-footer__price"><span>200 руб.</span></div>
+                                            <div class="intro-footer__price"><span>250 руб.</span></div>
                                         </div>
                                         <span class="intro-footer__subtext">Сироп на выбор</span>
                                     </div>
