--- a/alko.html
+++ b/alko.html
@@ -260,6 +260,11 @@
                                         <div class="intro-footer__price"><span>85 руб.</span></div>
                                     </div>
                                     <div class="intro-footer__col">
+                                        <div class="intro-footer__text">Боржоми</div>
+                                        <span class="intro-footer__subtext">0,5мл </span>
+                                        <div class="intro-footer__price"><span>150 руб.</span></div>
+                                    </div>
+                                    <div class="intro-footer__col">
                                         <div class="intro-footer__text">Кола</div>
                                         <span class="intro-footer__subtext">0,5л/1л</span>
                                         <div class="intro-footer__price"><span>120/150 руб.</span></div>
@@ -274,11 +279,11 @@
                                         <span class="intro-footer__subtext">300мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
                                     </div>
-                                    <div class="intro-footer__col">
+                                    <!-- <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Gorilla</div>
                                         <span class="intro-footer__subtext">0,45мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
-                                    </div>
+                                    </div> -->
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Burn</div>
                                         <span class="intro-footer__subtext">0,5л </span>
@@ -287,18 +292,18 @@
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text"> Adrenaline Rush</div>
                                         <span class="intro-footer__subtext">0,5л </span>
-                                        <div class="intro-footer__price"><span>155 руб.</span></div>
+                                        <div class="intro-footer__price"><span>200 руб.</span></div>
                                     </div>
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Red Bull</div>
                                         <span class="intro-footer__subtext">0,35мл </span>
-                                        <div class="intro-footer__price"><span>230 руб.</span></div>
+                                        <div class="intro-footer__price"><span>250 руб.</span></div>
                                     </div>
 
                                     <div class="intro-footer__col">
                                         <div class="intro-footer__text">Сок асс.</div>
                                         <span class="intro-footer__subtext">0,2мл/0,3мл</span>
-                                        <div class="intro-footer__price"><span>50/80 руб.</span></div>
+                                        <div class="intro-footer__price"><span>50/100 руб.</span></div>
                                     </div>
                                 </div>
 
