--- a/alko.html
+++ b/alko.html
@@ -19,7 +19,7 @@
             <section class="alko-section">
                 <div class="container">
                     <div class="intro-header">
-                        <!-- <div class="intro-wrapper--three">
+                        <div class="intro-wrapper--three">
                             <div class="intro-bar">
                                 <div class="intro__wrap">
                                     <h1 class="intro-title">Bubble напитки <span class="intro-titleSubtext">Новинка</span>
@@ -52,7 +52,7 @@
                                             <div class="intro__price">
                                                 <span>350 руб.</span>
                                             </div>
-                                        </div> -->
+                                        </div>
 
                                         <!-- <div class="intro__row">
                                             <div class="intro__col">
@@ -68,7 +68,7 @@
                                                 <span>350 руб.</span>
                                             </div>
                                         </div> -->
-                                        <!-- <div class="intro__row">
+                                        <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
@@ -123,7 +123,7 @@
                                             <div class="intro__price">
                                                 <span>350 руб.</span>
                                             </div>
-                                        </div> -->
+                                        </div>
                                         <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
@@ -249,8 +249,8 @@
                                     </div>
                                 </div>
                             </div> -->
-                        <!-- </div> -->
-                        <!-- <div class="intro-footer-wrap intro-footer-wrap--watter">
+                        </div>
+                        <div class="intro-footer-wrap intro-footer-wrap--watter">
                             <div class="intro-footer">
                                 <h1 class="intro-title">Безалкогольные напитки</h1>
                                 <div class="intro-footer__wrap">
@@ -278,13 +278,13 @@
                                         <div class="intro-footer__text">Кола стекло</div>
                                         <span class="intro-footer__subtext">300мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
-                                    </div> -->
+                                    </div>
                                     <!-- <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Gorilla</div>
                                         <span class="intro-footer__subtext">0,45мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
                                     </div> -->
-                                    <!-- <div class="intro-footer__col">
+                                    <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Burn</div>
                                         <span class="intro-footer__subtext">0,5л </span>
                                         <div class="intro-footer__price"><span>155 руб.</span></div>
@@ -340,7 +340,7 @@
                                     </div>
                                 </div>
 
-                            </div> -->
+                            </div>
                             <!-- <div class="intro-footer intro-footer--beer">
                                 <h1 class="intro-title">Пиво
                                 </h1>
