--- a/alko.html
+++ b/alko.html
@@ -19,7 +19,8 @@
             <section class="alko-section">
                 <div class="container">
                     <div class="intro-header">
-                        <div class="intro-wrapper--three">
+                        <img src="assets/images/fon2.jpg" alt="">
+                        <!-- <div class="intro-wrapper--three">
                             <div class="intro-bar">
                                 <div class="intro__wrap">
                                     <h1 class="intro-title">Bubble напитки <span class="intro-titleSubtext">Новинка</span>
@@ -52,7 +53,7 @@
                                             <div class="intro__price">
                                                 <span>350 руб.</span>
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <!-- <div class="intro__row">
                                             <div class="intro__col">
@@ -68,7 +69,7 @@
                                                 <span>350 руб.</span>
                                             </div>
                                         </div> -->
-                                        <div class="intro__row">
+                                        <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
                                                     <div class="intro__table-row">
@@ -123,7 +124,7 @@
                                             <div class="intro__price">
                                                 <span>350 руб.</span>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- <div class="intro__row">
                                             <div class="intro__col">
                                                 <div class="intro__table">
@@ -160,9 +161,9 @@
 
 
 
-                                    </div>
-                                </div>
-                            </div>
+                                    <!-- </div> -->
+                                <!-- </div> -->
+                            <!-- </div> --> 
                             <!-- <div class="intro-bar">
                                 <div class="intro__wrap">
                                     <div class="intro__decor">
@@ -249,8 +250,8 @@
                                     </div>
                                 </div>
                             </div> -->
-                        </div>
-                        <div class="intro-footer-wrap intro-footer-wrap--watter">
+                        <!-- </div> -->
+                        <!-- <div class="intro-footer-wrap intro-footer-wrap--watter">
                             <div class="intro-footer">
                                 <h1 class="intro-title">Безалкогольные напитки</h1>
                                 <div class="intro-footer__wrap">
@@ -278,13 +279,13 @@
                                         <div class="intro-footer__text">Кола стекло</div>
                                         <span class="intro-footer__subtext">300мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
-                                    </div>
+                                    </div> -->
                                     <!-- <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Gorilla</div>
                                         <span class="intro-footer__subtext">0,45мл </span>
                                         <div class="intro-footer__price"><span>100 руб.</span></div>
                                     </div> -->
-                                    <div class="intro-footer__col">
+                                    <!-- <div class="intro-footer__col">
                                         <div class="intro-footer__text">Энергетик Burn</div>
                                         <span class="intro-footer__subtext">0,5л </span>
                                         <div class="intro-footer__price"><span>155 руб.</span></div>
@@ -340,7 +341,7 @@
                                     </div>
                                 </div>
 
-                            </div>
+                            </div> -->
                             <!-- <div class="intro-footer intro-footer--beer">
                                 <h1 class="intro-title">Пиво
                                 </h1>
@@ -374,7 +375,7 @@
                                 </div>
 
                             </div> -->
-                        </div>
+                        <!-- </div> -->
                     </div>
                 </div>
             </section>
